@@ -91,7 +91,7 @@ iTerm also supports autolaunching of an Applescript on startup. On startup, iTer
 
 <BR>
 <FONT SIZE="-1">
-Modified: May 5th, 2003<BR>Created: Dec 18th, 2002<BR>
+Modified: Oct 5th, 2003<BR>Created: Dec 18th, 2002<BR>
 <A HREF="MAILTO:fabian@macvillage.net">Fabian</A> and <A HREF="MAILTO:ujwal@setlurgroup.com">Ujwal S. Sathyam</A><BR>
 Support free software by writing one.<BR>
 </FONT>
